/*
 * This file is part of Compass.
 * Copyright (C) 2026 Philipp Bobek <philipp.bobek@mailbox.org>
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * Compass is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

package com.bobek.compass.ui

object TestConstants {
    const val COMPASS_ROSE = "compass_rose"
    const val COMPASS_STRIP = "compass_strip"
    const val SENSOR_STATUS_BUTTON = "sensor_status_button"
    const val SENSOR_ACCURACY_TEXT = "sensor_accuracy_text"
    const val TRUE_NORTH_CHIP = "true_north_chip"
    const val MAGNETIC_FIELD_STRENGTH = "magnetic_field_strength"
}
